fix menu height, gap button group bugs

--- a/src/components/main_components/sidebarMenu.less
+++ b/src/components/main_components/sidebarMenu.less
@@ -54,7 +54,7 @@
   max-height: 0;
   transition: max-height .3s ease-in-out;
   &-open {
-    max-height: 1000px;
+    max-height: 10000px;
     transition: max-height .5s ease-in-out;
   }
   &-l1 {
